--- a/myPlatformer/.project
+++ b/myPlatformer/.project
@@ -14,4 +14,16 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>res/level_one_data.png</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/Downloads/level_one_data.png</locationURI>
+		</link>
+		<link>
+			<name>res/outside_sprites.png</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/OneDrive/Desktop/outside_sprites.png</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
