So now we have a hit box, I don't if it is working thought because the level one data doesn't show the level just one sprite on repeat. I've been changing the png several times but nothing seems to work. even though I'm still confused on programming I'm beginning to feel more comfortable with it.

--- a/myPlatformer/.project
+++ b/myPlatformer/.project
@@ -25,5 +25,10 @@
 			<type>1</type>
 			<locationURI>PARENT-4-PROJECT_LOC/Downloads/outside_sprites.png</locationURI>
 		</link>
+		<link>
+			<name>res/pixil-frame-0.png</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/Downloads/pixil-frame-0%20(1).png</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
