--- a/myPlatformer/.project
+++ b/myPlatformer/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>res/level_one_data.png</name>
 			<type>1</type>
-			<location>C:/Users/kotag/Downloads/PlatformerTutorial-ep09/PlatformerTutorial/res/level_one_data.png</location>
+			<locationURI>PARENT-2-WORKSPACE_LOC/Downloads/level_one_data.png</locationURI>
 		</link>
 		<link>
 			<name>res/outside_sprites.png</name>
